# plavdata

./: .env.prod.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  setup-ssl.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0b4b2e826fc1_baseline.py  49b09caf5991_add_age_at_result_to_results.py  5ad8679163d3_drop_unused_swimmer_discipline_courses_.py
backend/app/: auth.py  constants.py  db.py  links.py  main.py  models.py
backend/app/api/: admin.py  auth.py  competitions.py  dashboard_stats.py  groups.py  limiter.py  personal_bests.py  results.py  schemas.py  swimmers.py  utils.py
backend/app/core/: logging.py  middleware.py  routers.py
backend/app/crud/: common.py  competition.py  results.py  stats.py  swimmer_profile.py  update_club_records.py  update_personal_bests.py
backend/app/crud/tools/: best_relay.py
backend/app/scripts/: create_admin.py
backend/data/: pkboh.json  pkboh_automatically_categorized.json  pkboh_grouped.json  pkboh_swimmers.json
backend/scripts/: categorize_pkboh_swimmers.py  config.py  debug.py  fetch_all_swimmers.py  group_swimmers.py  parse_pkboh_swimmers.py  records.py  utils.py
backend/scripts/db/: calculate_improvements.py  init_db.py  link_results_to_competitions.py  sync_competition_tags.py  sync_competitions.py  sync_personal_bests.py  sync_results.py
backend/scripts/parse/: categorize_pkboh_swimmers.py  fetch_all_swimmers.py  group_swimmers.py  parse_all_pkboh.py  parse_pkboh_swimmers.py  utils.py
(+102 files in other folders)
