[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "beautifulsoup4>=4.13.3",
    "cryptography>=46.0.4",
    "fastapi>=0.115.12",
    "lxml>=6.0.1",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.12",
    "pyaml>=25.7.0",
    "python-jose[cryptography]>=3.5.0",
    "python-logging-loki>=0.3.1",
    "requests>=2.32.3",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "unidecode>=1.4.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.2",
]
